--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "bootstrap": "^5.3.2",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
